--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,28 @@
 {
-    "require": {
-        "phpunit/phpunit": "4.6.*"
+  "name": "namara/namara",
+  "type": "library",
+  "description": "The official PHP client for the Namara open data service",
+  "keywords": [
+    "namara",
+    "open data",
+    "api",
+    "canada",
+    "us",
+    "government",
+    "independent"
+  ],
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "ThinkData Works",
+      "email": "info@namara.io",
+      "homepage": "https://namara.io"
     }
+  ],
+  "require": {
+    "php": ">=5.3.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.6.*"
+  }
 }
